--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="/images/dice1.png" alt="img1">
+        <img class="img1" src="images/dice1.png" alt="img1">
       </div>
 
       <div class="dice">
