--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-  <script src="/index.js"  type="text/javascript"></script>
+  <script src="index.js"  type="text/javascript"></script>
   </head>
   <body>
 
@@ -20,7 +20,7 @@
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="/images/dice1.png" alt="img1">
+        <img class="img2" src="images/dice1.png" alt="img1">
       </div>
       
 
