--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <p>Player 2</p>
         <img class="img2" src="images/dice1.png" alt="img1">
       </div>
-      
-
+     <script src="index.js"  type="text/javascript"></script>
     </div>
 
   </body>
